kubernetes/helloworld/hw-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw
  labels:
    run: hello-world
