kubernetes/helloworld/hw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-service
  namespace: hw
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: helloworld
